removed unused images and added missing image

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 						<div id="linkcontainer" aria-labelledby="youtube-link" aria-keyshortcuts="Ctrl+Shift+Enter">
 							Example Controlling focus with tabindex. <mark>Ctrl+Shift+Enter</mark> to
 							<form action="https://www.youtube.com/watch?v=Pe0Ce1WtnUM">
-								<button id="youtube-link" role="link" tabindex="-1" aria-hidden="true" title="open" class="tooltip top">open
+								<button id="youtube-link" role="link" tabindex="-1" aria-hidden="true" title="open"
+									class="tooltip top">open
 								</button>
 							</form>
 						</div>
@@ -210,8 +211,7 @@
 						<p>For example, on most US English keyboards, the percent sign <mark>%</mark> can be input
 							by pressing
 							<mark>Shift+5</mark><span aria-hidden="true">.</span>
-							The correct way to specify this shortcut is <mark>Shift+5</mark><span
-								aria-hidden="true">.</span> It is
+							The correct way to specify this shortcut is <mark>Shift+5</mark><span aria-hidden="true">.</span> It is
 							incorrect to
 							specify <mark>%
 								or Shift+%</mark><span aria-hidden="true">.</span>
@@ -239,8 +239,8 @@
 					<h2>Aria-keyshortcuts Rules</h2>
 					<div class="gradient-border">
 						<h3 class="gradient-border gradient-border-09">For example, the single-quote character can be
-							encoded as <span id="mixedcode2">ampersand hash 39 semi-colon</span><a
-								aria-labelledby="mixedcode2"><mark aria-hidden="true">&amp;#39;</mark></a> in HTML.
+							encoded as <span id="mixedcode2">ampersand hash 39 semi-colon</span><a aria-labelledby="mixedcode2"><mark
+									aria-hidden="true">&amp;#39;</mark></a> in HTML.
 						</h3>
 						<h4>User agents MUST NOT change keyboard behavior in response to the aria-keyshortcuts
 							attribute.
@@ -448,7 +448,7 @@
 						<p id="aria-label-example-2">
 							<input type="text" placeholder="What's your name?">
 						</p>
-					
+
 						<pre id="aria-label" aria-hidden="true">
 							<code class="language-html" data-trim><script type="text/template">
 								<input type="text"
@@ -681,10 +681,8 @@
 				</section>
 				<section>
 					<h3>Examples</h3>
-					<small> Use <a
-							href="https://chrome.google.com/webstore/detail/screen-reader/kgejglhpjiefppelpmljglcjbhoiplfn"
-							target="_blank" rel="noopener noreferrer">Screen Reader</a> and <span
-							class="aria-label-highlighted">Tab
+					<small> Use <a href="https://chrome.google.com/webstore/detail/screen-reader/kgejglhpjiefppelpmljglcjbhoiplfn"
+							target="_blank" rel="noopener noreferrer">Screen Reader</a> and <span class="aria-label-highlighted">Tab
 							key </span> for examples</small>
 					<h4>Example without aria-describedby</h4>
 
@@ -711,14 +709,12 @@
 					<ul>
 						<li> <a href="https://maryrichelle.github.io/Mailchimp-clone/" target="_blank">
 								Live Demo: </a>
-							Use <a
-								href="https://chrome.google.com/webstore/detail/screen-reader/kgejglhpjiefppelpmljglcjbhoiplfn"
-								target="_blank" rel="noopener noreferrer">Screen Reader</a> and <span
-								class="aria-label-highlighted">Tab
+							Use <a href="https://chrome.google.com/webstore/detail/screen-reader/kgejglhpjiefppelpmljglcjbhoiplfn"
+								target="_blank" rel="noopener noreferrer">Screen Reader</a> and <span class="aria-label-highlighted">Tab
 								key </span>
 						</li>
-						<li><a href="https://github.com/MaryRichelle/Mailchimp-clone/blob/main/index.html"
-								target="_blank" rel="noopener noreferrer">Code(GitHub Repo ↗️):</a></li>
+						<li><a href="https://github.com/MaryRichelle/Mailchimp-clone/blob/main/index.html" target="_blank"
+								rel="noopener noreferrer">Code(GitHub Repo ↗️):</a></li>
 					</ul>
 				</section>
 			</section>
@@ -774,8 +770,7 @@
 				</section>
 				<section>
 					<div class="visibility-hidden" aria-hidden="true">Hidden header</div>
-					<p>If a progress bar is at 8%, what does that mean? <span
-							class="aria-label-highlighted">aria-valuetext</span>
+					<p>If a progress bar is at 8%, what does that mean? <span class="aria-label-highlighted">aria-valuetext</span>
 						provides a way of presenting the current value in a more user-friendly,
 						human-understandable way. For example, a battery meter value might be conveyed as
 						<span class="aria-label-highlighted">aria-valuetext="8% (34 minutes) remaining"</span>.
@@ -799,8 +794,7 @@
 					<p>The values of <span class="aria-label-highlighted">aria-valuenow</span> for a 4-year college
 						could range from 1 through 4, which indicate the position of each value in the value space. In
 						this case,
-						the <a
-							href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuetext"
+						the <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-valuetext"
 							target="_blank">aria-valuetext</a>
 						could be one of the strings: "first year", "sophomore", "junior", and enior".
 					</p>
@@ -809,8 +803,7 @@
 					<div class="visibility-hidden" aria-hidden="true">Hidden header</div>
 					<p>If the numeric value is meaningful, such as a spinner with <span
 							class="aria-label-highlighted">aria-valuenow="3"</span>
-						for how many pizza slices you want to order, <span
-							class="aria-label-highlighted">aria-valuetext</span> is
+						for how many pizza slices you want to order, <span class="aria-label-highlighted">aria-valuetext</span> is
 						not needed.
 					</p>
 				</section>
@@ -827,8 +820,7 @@
 				</section>
 				<section>
 					<div class="visibility-hidden" aria-hidden="true">Hidden header</div>
-					<p>And this is all you need to know about the <span
-							class="aria-label-highlighted">aria-valuetext</span>!
+					<p>And this is all you need to know about the <span class="aria-label-highlighted">aria-valuetext</span>!
 						Or not? Feel free to ask any questions!
 					</p>
 				</section>
