fixes in ARIA-Sort

--- a/index.html
+++ b/index.html
@@ -574,14 +574,14 @@
 					<pre>
 					<code id="htmlCode" class="language-html">
 					  &lt;table&gt;
-						&lt;thead&gt;
-						  &lt;tr&gt;
-							&lt;th aria-sort="ascending"&gt;Last Name&lt;/th&gt;
-						  &lt;/tr&gt;
-						&lt;/thead&gt;
-						&lt;tbody&gt;
-						  <!-- Table data goes here -->
-						&lt;/tbody&gt;
+							&lt;thead&gt;
+								&lt;tr&gt;
+									&lt;th aria-sort="ascending"&gt;Last Name&lt;/th&gt;
+								&lt;/tr&gt;
+							&lt;/thead&gt;
+							&lt;tbody&gt;
+								<!-- Table data goes here -->
+							&lt;/tbody&gt;
 					  &lt;/table&gt;
 					</code>
 				  </pre>
@@ -738,7 +738,7 @@
 					<div class="visibility-hidden" aria-hidden="true">Hidden header</div>
 					<h3>Example:</h3>
 					<pre>
-					<code id="htmlCode" class="language-html">
+					<code class="language-html">
 					  &lt;p id="birthyearLabel" &gt;What year were you born?&lt;/p&gt;
 						&lt;div
 						role="spinbutton"
