--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section>
+			<section data-background="home-background">
 				<h1>A11y &AMP; ARIA LABELS </h1>
 				<img width="200" height="200" src="assets/aria-logo.png" alt="web accessibility logo">
 				<h2> group project</h2>
