--- a/index.html
+++ b/index.html
@@ -907,9 +907,8 @@
     var imageUrl = '../assets/subtle-grey.png';
 
     // Get the element with class 'reveal' and apply the background
-    var revealElement = document.querySelector('.reveal');
+    var revealElement = document.querySelector('.reveal .slide-background');
     revealElement.style.background = '#000000 url(' + imageUrl + ') repeat !important';
-
 		});
 	</script>
 
