--- a/index.html
+++ b/index.html
@@ -908,8 +908,7 @@
 
     // Get the element with class 'reveal' and apply the background
     var revealElement = document.querySelector('.reveal .slide-background');
-    revealElement.style.background = '#000000 url(' + imageUrl + ') repeat !important';
-		});
+    revealElement.classList.add('background-pattern');
 	</script>
 
 </body>
