--- a/index.html
+++ b/index.html
@@ -902,13 +902,8 @@
 			document.querySelector('[tabindex="-1"]').focus();
 		});
 		Reveal.addEventListener('home-background', function () {
-			// JavaScript (your-custom-script.js)
-    // Define the image URL
-    var imageUrl = '../assets/subtle-grey.png';
-
-    // Get the element with class 'reveal' and apply the background
-    var revealElement = document.querySelector('.reveal .slide-background');
-    revealElement.classList.add('background-pattern');
+		    var imageUrl = '../assets/subtle-grey.png';
+		    document.querySelector('.reveal .slide-background').classList.add('background-pattern');
 	</script>
 
 </body>
