--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<div class="slides">
 			<section id="home-page" data-state="home-background">
 				<h1>A11y &AMP; ARIA LABELS </h1>
-				<img width="200" height="200" src="assets/aria-logo.png" alt="web accessibility logo">
+				<img src="assets/aria-logo.svg" alt="web accessibility logo">
 				<h2> group project</h2>
-				<p> cohort 02, in<strong id="tech">TECH</strong>gration </p>
+				<p> Cohort 02 | in<strong id="tech">TECH</strong>gration </p>
 			</section>
 			<section>
 				<h2>A11Y </h2>
