--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section id="home-page" data-state="home-background">
-				<h1>A<span class="orange-color">11</span>y &AMP; ARIA LABELS </h1>
+				<h1 class="text-shadow-orange-white">A<span class="orange-color text-shadow-white-orange">11</span>y &AMP; ARIA LABELS </h1>
 				<img src="assets/aria-logo.svg" alt="web accessibility logo">
 				<h2> group project</h2>
 				<p> Cohort 02 | in<strong id="tech">TECH</strong>gration </p>
