--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<section id="home-page" data-state="home-background">
 				<h1 class="text-shadow-orange-white">A<span class="orange-color text-shadow-white-orange">11</span>y &AMP; ARIA LABELS </h1>
 				<img src="assets/aria-logo.svg" alt="web accessibility logo">
-				<h2> group project</h2>
+				<h2 class="text-shadow-orange-white"> group project</h2>
 				<p> Cohort 02 | in<strong id="tech">tech</strong>gration </p>
 			</section>
 			<section>
