css validator changes to styles.css

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						   </p>
 							<p>
 								The keys defined in the shortcuts represent the physical keys pressed and not the actual
-								charactersgenerated.<br><br>
+								charactersgenerated.
 							</p>
 							<p>
 								Each keyboard shortcut consists of one or more tokens delimited by 
